[project]
name = "whereinthedns"
version = "0.1.0"
description = ""
authors = [
    {name = "hallowslab",email = "hallows.tech.lab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
nuitka = "^2.7.12"

