[project]
name = "whereinthedns"
version = "0.2.0"
description = ""
authors = [
    {name = "hallowslab",email = "hallows.tech.lab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]

[project.scripts]
exportVersion = "poetry-version-exporter --output src/_version.py"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyinstaller = "^6.14.2"
poetry-version-exporter = {git = "https://github.com/hallowslab/poetry-version-exporter", rev = "v0.1.3"}

